2010-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add "union tags" in mpc.el.
	* mpc.el: Remove backward compatibility code.
	(mpc-browser-tags): Change default.
	(mpc--find-memoize-union-tags): New var.
	(mpc-cmd-flush, mpc-cmd-special-tag-p): New fun.
	(mpc-cmd-find): Handle the case where the playlist does not exist.
	Handle union-tags.
	(mpc-cmd-list): Use mpc-cmd-special-tag-p.  Handle union-tags.
	(mpc-cmd-add): Use mpc-cmd-flush.
	(mpc-tagbrowser-tag-name): New fun.
	(mpc-tagbrowser-buf): Use it.
	(mpc-songs-refresh): Use cond.  Move to point-min as a fallback.

2010-03-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	Misc cleanup.
	* progmodes/make-mode.el (makefile-bsdmake-rule-action-regex):
	Use replace-regexp-in-string.
	(makefile-mode-abbrev-table): Merge defvar and define-abbrev-table.
	(makefile-imake-mode-syntax-table): Move init into defvar.
	(makefile-mode): Use define-derived-mode.

	* progmodes/make-mode.el (makefile-rule-action-regex): Backtrack less.
	(makefile-make-font-lock-keywords): Adjust rule since submatch 1 may
	not be present any more.

2010-03-24  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (set-face-attribute): Fix typo in docstring.
	(face-valid-attribute-values): Reflow docstring.

	* cedet/srecode/table.el (srecode-template-table): Fix docstring typo.

2010-03-24  Glenn Morris  <rgm@gnu.org>

	* textmodes/flyspell.el (sgml-lexical-context): Autoload it (Bug#5752).

2010-03-24  Chong Yidong  <cyd@stupidchicken.com>

	* indent.el (indent-for-tab-command): Doc fix.

2010-03-24  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-remove-stale-state-cache):
	Fix off-by-one error.  Fixes bug #5747.

2010-03-24  Juanma Barranquero  <lekktu@gmail.com>

	* image-dired.el (image-dired-display-thumbs): Fix typo in docstring.
	(image-dired-read-comment): Doc fix.

	* json.el (json-object-type, json-array-type, json-key-type)
	(json-false, json-null, json-read-number):
	* minibuffer.el (completion-in-region-functions):